created login page

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,8 +1,9 @@
 $balck: #000;
-$yellow: #ECAA11;
-$blue:#511CBE ;
-$darkBlue: #5E419A;
-$white:#FFFFFF ;
-$darkWhite:#FCF9FF ;
-$gray:#FCF9FF  ;
-$lightGray:#F0F0F0 ;
+$yellow: #ecaa11;
+$blue: #511cbe;
+$darkBlue: #5e419a;
+$white: #ffffff;
+$darkWhite: #fcf9ff;
+$gray: #fcf9ff;
+$lightGray: #f0f0f0;
+$textGray: #7b728d;
