created topbar and sidebar

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -6,4 +6,7 @@ $white: #ffffff;
 $darkWhite: #fcf9ff;
 $gray: #fcf9ff;
 $lightGray: #f0f0f0;
+$darkGray: #eee4f8;
 $textGray: #7b728d;
+$red: #eb6c6d;
+$shadowColor: #00000012;
