--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,5 +1,6 @@
 $balck: #000;
 $yellow: #ecaa11;
+$lightYellow: #fff5df;
 $blue: #511cbe;
 $darkBlue: #5e419a;
 $white: #ffffff;
@@ -7,6 +8,8 @@ $darkWhite: #fcf9ff;
 $gray: #fcf9ff;
 $lightGray: #f0f0f0;
 $darkGray: #eee4f8;
+$darkGray2: #fcf9ff;
 $textGray: #7b728d;
 $red: #eb6c6d;
+$lightRed: #ffeef4;
 $shadowColor: #00000012;
