--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -80,6 +80,7 @@
       hr {
         margin: 2rem 0px;
       }
+    
       .form-footer2 {
         font-size: 12px;
         text-align: center;
@@ -95,4 +96,12 @@
       }
     }
   }
+}
+
+.PasswordErrorMessage {
+  font-weight: 400;
+  color: #ff0000;
+  font-size: 14px;
+  text-align: center;
+  
 }
