--- a/src/styles/register.scss
+++ b/src/styles/register.scss
@@ -66,14 +66,14 @@
           border-radius: 8px;
         }
       }
-      .forget-password-container {
-        text-align: center;
-        a {
-          color: $textGray;
-          font-size: 12px;
-          text-transform: capitalize;
-        }
-      }
+      // .forget-password-container {
+      //   text-align: center;
+      //   a {
+      //     color: $textGray;
+      //     font-size: 12px;
+      //     text-transform: capitalize;
+      //   }
+      // }
 
       hr {
         margin: 2rem 0px;
