--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -119,7 +119,7 @@
       @include flex-space;
       span {
         font-size: 14px;
-        color: $balck;
+        color: $black;
       }
     }
   }
