--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -38,6 +38,7 @@
       background: $white 0% 0% no-repeat padding-box;
       box-shadow: 0px 3px 24px #0000000f;
       border-radius: 8px;
+      width: 30%;
 
       h2 {
         color: $blue;
@@ -49,6 +50,11 @@
       }
 
       form {
+        .error {
+          font-weight: 400;
+          color: #ff0000;
+          font-size: 12px;
+        }
         input {
           background-color: $darkWhite;
         }
@@ -95,5 +101,11 @@
         }
       }
     }
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .login-main-container .form-main-container .form-container {
+    width: 90%;
   }
 }
