--- a/src/styles/register.scss
+++ b/src/styles/register.scss
@@ -38,6 +38,7 @@
       background: $white 0% 0% no-repeat padding-box;
       box-shadow: 0px 3px 24px #0000000f;
       border-radius: 8px;
+      width: 30%;
 
       h2 {
         color: $blue;
@@ -97,5 +98,11 @@
         }
       }
     }
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .register-main-container .form-main-container .form-container {
+    width: 90%;
   }
 }
