--- a/src/styles/all_accounts.scss
+++ b/src/styles/all_accounts.scss
@@ -80,6 +80,7 @@
       border: 0;
       text-transform: uppercase;
       font-weight: 500;
+      outline: none;
       &:hover {
         opacity: 0.7;
       }
