--- a/src/styles/addNew.scss
+++ b/src/styles/addNew.scss
@@ -1,24 +1,31 @@
 @import "partials";
 @import "colors";
 
-.addNew-main-container{
-    padding-bottom: 1rem;
-    .buttons-container {
-        display: flex;
-        align-items: flex-end;
-        justify-content: flex-end;
-        button {
-          background-color: $yellow;
-          color: $white;
-        }
-        label{
-            margin: 10px 0px;
-            font-weight: 600;
-            font-size: 14px;
-        }
-      }
-}
-    .Modal-tittle {
-        color: $blue;
-        font-size: 16px;
+.addNew-main-container {
+  padding-bottom: 1rem;
+  .buttons-container {
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+    button {
+      background-color: $yellow;
+      color: $white;
     }
+    label {
+      margin: 10px 0px;
+      font-weight: 600;
+      font-size: 14px;
+    }
+  }
+}
+
+.Modal-tittle {
+  color: $blue;
+  font-size: 16px;
+}
+
+.error {
+  font-weight: 400;
+  color: #ff0000;
+  font-size: 12px;
+}
