--- a/src/styles/expenseIncomeItem.scss
+++ b/src/styles/expenseIncomeItem.scss
@@ -6,16 +6,9 @@
   font-size: 14px;
   .income-row {
     border-bottom: none !important;
-    @include flex-space;
-    .transaction-dot {
-      width: 5px;
-      height: 5px;
-      padding: 0;
-      margin: 0;
-      border-radius: 100%;
-      background-color: $darkBlue;
+    td {
+      padding: 5px 0px;
     }
-
     .amount {
       color: $darkBlue;
     }
@@ -23,15 +16,6 @@
 
   .expense-row {
     border-bottom: none !important;
-    @include flex-space;
-    .transaction-dot {
-      width: 5px;
-      height: 5px;
-      padding: 0;
-      margin: 0;
-      border-radius: 100%;
-      background-color: $red;
-    }
     .amount {
       color: $red;
     }
@@ -58,6 +42,7 @@
   }
   .category {
     font-weight: bold;
+    font-size: 12px;
     text-transform: uppercase;
   }
   .date,
