--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1407,10 +1407,17 @@ img {
   }
 }
 
- .home-main-container {
-  //  padding-top: 30px;
-   padding-left: 70px;
-   padding-right: 70px;
-   margin-top: 30px;
-  //  flex-direction: center;
+ .front-container{
+   margin-top: 70px;
+   padding-top: 50px;
+}
+ .register-container{
+   padding-left: 10px;
+   padding-top: 70px;
+ }
+
+ body{
+   margin-left: 2rem;
+   padding-left: 3px;
+   padding-right: 3px;
  }
