--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -8,6 +8,7 @@
   top: 0;
   width: 100%;
   z-index: 100;
+  transition: 2s;
 
   .nav-bar-right-contents {
     ul {
@@ -30,8 +31,16 @@
       }
     }
   }
+  .logo-container {
+    a {
+      text-decoration: none;
+    }
+  }
 }
 
+.bg {
+  background-color: $blue;
+}
 .welcome-section {
   height: 100vh;
   position: relative;
